correccion de posicion de boton agregar al carrito, estilizado de menu desplegable, adicion de fondo a la pagina

--- a/autobiografia.html
+++ b/autobiografia.html
@@ -94,7 +94,9 @@
 	<header>
 			
 	</header>
-	<h1>Todo Sobre mi, y mi trayectoria.</h1>
+	<div class="container-title">
+        <h1>Todo Sobre mi, y mi trayectoria.</h1>
+    </div>
 	<p>
 		
 		<b>Edad:</b> 21<br><!--Mediante un "<b>" colocamos en negritas para resaltar el texto que indica la informacion-->
