--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     </nav>
 	<header>
 		
-		<h1>Esta pagina es el inicio</h1>
+		<div class="container-title">
+            <h1>Inicio</h1>
+        </div>
 		<h2>
 			Esta pagina es la primer pagina web creada por <b>JhonEG17</b> como parte de su aprendizaje como <b>desarrollador web.</b> y como muestra de su progreso en el uso de las tecnologias actuales como <b>HTML5</b>. <br> Para conocer mas de el y todo lo que hace da click al enlace: <br> <a href="https://www.youtube.com/@JhonEG17" target="_blank">Canal de YouTube</a>
 		</h2>
