--- a/redes.html
+++ b/redes.html
@@ -91,7 +91,9 @@
                 
     </nav>
 	<header>
-		<h1>Redes Sociales.</h1>
+        <div class="container-title">
+            <h1>Redes Sociales.</h1>
+        </div>
 		<p>
 			<a href="https://www.facebook.com/JhonEG17z" target="_blank">Facebook</a><br>
 			<a href="https://www.instagram.com/jhoneg17?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a><br>
