--- a/tienda.html
+++ b/tienda.html
@@ -108,8 +108,8 @@
               
               <!--utilizamos el svg llamando a un icono externo de la pagina heroicons-->
             <div class="count-products">
-                <span
-                    id="contador-productos">0
+                <span id="contador-productos">
+                    0
                 </span>
             </div>
 
@@ -126,7 +126,7 @@
                             $28
                         </span>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-delete">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                     </svg>
                       
