modificacion a archivos tienda, index, redes, autobiografia. se agregaron contenido y estilos con css

--- a/tienda.html
+++ b/tienda.html
@@ -12,9 +12,10 @@
 <body>
 
     <header>
-        
+        <!--div para nuestro titulo o encabezado de pagina-->
         <div class="container-title">
-            <h1>Tienda</h1>
+            <h1>Tienda.</h1>
+            <!--nav para nuestro menu-->
             <nav class="menu">
                 <ul>
         
