--- a/redes.html
+++ b/redes.html
@@ -6,7 +6,7 @@
 	<title>Mis Redes</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body >
+<body class="redes">
 	<header><!--seccion para el titulo principal y el menu de navegacion
     -->
         <!--div para nuestro titulo o encabezado de pagina-->
@@ -82,13 +82,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="logout.html">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="logout-icon">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
                               </svg>
                               
                             <i class="fas fa-logout"></i>
-                            <span class="nav-item">Logout</span>
+                            <span class="nav-item">Cerrar Sesion</span>
                         </a>
                     </li>
                     <!--esto es nuestro menu de navegacion en la pagina utilizando "href" para poder desplazarnos entre paginas facilmente-->
@@ -130,5 +130,6 @@
     </main>
 	
 
+    <script src="animations.js"></script>
 </body>
 </html>
