--- a/logout.html
+++ b/logout.html
@@ -14,7 +14,7 @@
     -->
         <!--div para nuestro titulo o encabezado de pagina-->
         <div class="container-title">
-            <h1>Redes Sociales.</h1>
+            <h1>Bienvenido!.</h1>
             <!--nav para nuestro menu-->
             <nav class="menu">
                 <ul>
@@ -103,25 +103,28 @@
     </header>
     <main logout>
         <div class="wrapper">
+            <span class="icon-close">
+                <ion-icon name="close-outline"></ion-icon>
+            </span>
             <div class="form-box login">
                 <h2>
                     Login
                 </h2>
                 <form action="#">
                     <div class="input-box">
-                        <span class="icon-person"><ion-icon name="mail-outline"></ion-icon></span>
+                        <span class="iconss"><ion-icon name="mail-outline"></ion-icon></span>
                         <input type="email" required>
                         <label>Email</label>
                     </div>
                     <div class="input-box">
-                        <span class="icon-password"><ion-icon name="lock-closed-outline"></ion-icon></span>
+                        <span class="iconss"><ion-icon name="lock-closed-outline"></ion-icon></span>
                         <input type="password" required>
                         <label>Password</label>
                     </div>
-                    <div>
+                    <div class="remember-forgot">
                         <label><input type="checkbox">
                         Remember me</label>
-                        <a href="#">Forgot Password?</form></a>
+                        <a href="#">Forgot Password?</a>
                     </div>
                     <button type="submit" class="btn">login</button>
                     <div class="login-register">
@@ -130,6 +133,42 @@
 
                             <a href="#" class="register-link">
                                 Register
+                            </a>
+                        </p>
+                    </div>
+                </form>
+            </div>
+            <div class="form-box login">
+                <h2>
+                    Register
+                </h2>
+                <form action="#">
+                    <div class="input-box">
+                        <span class="iconss"><ion-icon name="person-circle-outline"></ion-icon></span>
+                        <input type="text" required>
+                        <label>Username</label>
+                    </div>
+                    <div class="input-box">
+                        <span class="iconss"><ion-icon name="mail-outline"></ion-icon></span>
+                        <input type="email" required>
+                        <label>Email</label>
+                    </div>
+                    <div class="input-box">
+                        <span class="iconss"><ion-icon name="lock-closed-outline"></ion-icon></span>
+                        <input type="password" required>
+                        <label>Password</label>
+                    </div>
+                    <div class="remember-forgot">
+                        <label><input type="checkbox">
+                        agree to the terms & conditions</label>
+                    </div>
+                    <button type="submit" class="btn">Register</button>
+                    <div class="login-register">
+                        <p>
+                            Already have an account?
+
+                            <a href="#" class="login-link">
+                                Login
                             </a>
                         </p>
                     </div>
