--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
     -->
         <!--div para nuestro titulo o encabezado de pagina-->
         <div class="container-title">
-            <h1>Redes Sociales.</h1>
+            <h1>Perfil.</h1>
             <!--nav para nuestro menu-->
             <nav class="menu">
                 <ul>
