--- a/logout.html
+++ b/logout.html
@@ -117,84 +117,9 @@
         </div>
     </header>
     <main >
-        <div class="btnLogin">
-            <button class="btnLogin-popup">login</button>
-        </div>
-        <div class="wrapper">
-            <span class="icon-close">
-                <ion-icon name="close-outline"></ion-icon>
-            </span>
-            <div class="form-box login">
-                <h2>
-                    Login
-                </h2>
-                <form action="#">
-                    <div class="input-box">
-                        <span class="iconss email-icon"><ion-icon name="mail-outline"></ion-icon></span>
-                        <input type="email" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="iconss password-icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                        <input type="password" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remember-forgot">
-                        <label><input type="checkbox">
-                        Remember me</label>
-                        <a href="#">Forgot Password?</a>
-                    </div>
-                    <button type="submit" class="btn-logreg">login</button>
-                    <div class="login-register">
-                        <p>
-                            Don't have an account?
-
-                            <a href="#" class="register-link">
-                                Register
-                            </a>
-                        </p>
-                    </div>
-                </form>
-            </div>
-            <div class="form-box login">
-                <h2>
-                    Register
-                </h2>
-                <form action="#">
-                    <div class="input-box">
-                        <span class="iconss username-icon"><ion-icon name="person-circle-outline"></ion-icon></span>
-                        <input type="text" required>
-                        <label>Username</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="iconss email-icon"><ion-icon name="mail-outline"></ion-icon></span>
-                        <input type="email" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="iconss password-icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                        <input type="password" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remember-forgot">
-                        <label><input type="checkbox">
-                        agree to the terms & conditions</label>
-                    </div>
-                    <button type="submit" class="btn-logreg">Register</button>
-                    <div class="login-register">
-                        <p>
-                            Already have an account?
-
-                            <a href="#" class="login-link">
-                                Login
-                            </a>
-                        </p>
-                    </div>
-                </form>
-            </div>
-        </div>
+        
     </main>
-    <script src="animations.js"></script>
+    <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
