--- a/tienda.html
+++ b/tienda.html
@@ -152,9 +152,9 @@
                 <div class="row-product hidden">
                     <div class="cart-product">
                         <div class="info-cart-product">
-                            <span class="cantidad-producto-carrito">1</span>
-                            <span class="titulo-producto-carrito">Playera Negra</span>
-                            <span class="precio-producto-carrito">$28</span>
+                            <span class="cantidad-producto-carrito"></span>
+                            <span class="titulo-producto-carrito"></span>
+                            <span class="precio-producto-carrito"></span>
                         </div>
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -174,7 +174,7 @@
                 </div>    
                 <div class="cart-total hidden">
                     <h3>Total:</h3>
-                    <span class="total-pagar">$200</span>
+                    <span class="total-pagar"> </span>
                 </div>
             </div>
         </div>    
