--- a/tienda.html
+++ b/tienda.html
@@ -22,6 +22,14 @@
                     </svg>
                 </button>
             </div>
+            <div class="container-search">
+                <input type="text" placeholder="Buscar...">
+                <button class="btn-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="search-icon">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                    </svg>
+                </button>
+            </div>
             <!--nav para nuestro menu-->
             <nav class="menu">
                 <span class="icon-close-menu">
