se agregan opciones para la customisazion del usuario en la pagina en el archivo profile.html y en el archivo styles.css localizado los cambios en la linea numero 638

--- a/logout.html
+++ b/logout.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Logout</title>
-    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="..\css\styles.css">
 </head>
 <body logout>
     <header><!--seccion para el titulo principal y el menu de navegacion
@@ -128,7 +128,7 @@
     <main >
         
     </main>
-    <script src="js\script.js"></script>
+    <script src="..\js\script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
